--- a/_layouts/base.njk
+++ b/_layouts/base.njk
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Oliver Boulton</title>
+    <meta name="description" content="Oliver Boulton · Works between Paris and London · studio@oliverboulton.com"></meta>
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127205123-1"></script>
@@ -33,7 +34,7 @@
     <footer class="site-footer">
         <p> All rights reserved 2019 © Oliver Boulton.</p>
     </footer>
-
+    <div class="overlay"></div>
     <script src="/js/main.js"></script>
 
 </body>
