Add anchor links to homepage projects

--- a/_layouts/project.njk
+++ b/_layouts/project.njk
@@ -9,6 +9,6 @@ bodyClass: project
 </article>
 
 <nav class="footer-nav">
-    <a href="/">⬿</a>
+    <a href="/#{{title | urlencode }}">⬿</a>
     <a class='randomLink' href='#'>ξ</a>
 </nav>
