--- a/_layouts/base.njk
+++ b/_layouts/base.njk
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Oliver Boulton</title>
+    <title>Oliver Boulton{% if title %} · {{title}}{% endif %}</title>
     <meta name="description" content="Oliver Boulton · Works between Paris and London · studio@oliverboulton.com"></meta>
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
