--- a/_layouts/base.njk
+++ b/_layouts/base.njk
@@ -6,10 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Oliver Boulton{% if title %} · {{title}}{% endif %}</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="description" content="Oliver Boulton · Works between Paris and London · studio@oliverboulton.com"></meta>
     
+    {% import "favicon.njk" as util %}    
+    
+    {% if favicon %}    
+        {{ util.favicon(favicon)}}
+    {% else %}
+        {{ util.favicon("favicon-1")}}
+    {% endif %}    
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127205123-1"></script>
+    
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
