--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@
   --brown: #392e32;
   --margin: 30px;
   --margin-small: 13.5px;
-
 }
 
 @font-face {
@@ -46,7 +45,6 @@ body.project {
 }
 
 
-/* unvisited link */
 a {
   color: purple;
   text-shadow: 0 0 12.5px purple;
@@ -55,7 +53,6 @@ a {
 
 }
 
-/* visited link */
 a:visited {
   color: purple;
   transition: .2s ease-in-out;
@@ -64,12 +61,6 @@ a:visited {
 a[href]:hover {
   color: #d7d5d6;
   text-shadow: 0 0 12.5px #d7d5d6;
-  transition: .2s ease-in-out;
-}
-
-/* selected link */
-a[]:active {
-  color: purple;
   transition: .2s ease-in-out;
 }
 
@@ -130,13 +121,18 @@ a[]:active {
 [data-book="true"] .post-list-image {
   margin-bottom: -.5vw;
 }
+
 .post-list-image {
   display: block;
-  margin-bottom: calc(var(--margin-small) + 1px) /* margin-small with optical correction */;
+  margin-bottom: calc(var(--margin-small) + 1px)
+    /* margin-small with optical correction */
+  ;
   cursor: pointer;
 }
+
 .post-list-image:last-of-type {
-  margin-bottom: calc(var(--margin) - 2px); /*margin with optical correction*/
+  margin-bottom: calc(var(--margin) - 2px);
+  /*margin with optical correction*/
 }
 
 .post-list-image img {
@@ -175,7 +171,9 @@ a[]:active {
   margin-bottom: 4rem;
   padding-left: var(--margin-small);
   padding-right: var(--margin-small);
-  padding-top: var(--margin)
+  padding-top: var(--margin);
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 @media (min-width: 60rem) {
@@ -200,11 +198,12 @@ a[]:active {
   margin-bottom: 1.2em;
   width: 100%;
   margin-left: calc(var(--margin-small) * -1);
-  padding-left: var(--margin);
+  padding-left: var(--margin-small);
 }
 
 @media (min-width: 50rem) {
   .single-post--content p {
+    padding-left: var(--margin);
     width: 50%;
   }
 }
@@ -227,6 +226,7 @@ a[]:active {
 }
 
 @media (max-width: 40rem) {
+
   .single-post--content picture,
   .single-post--content img {
     width: 100% !important;
@@ -240,22 +240,19 @@ a[]:active {
 
 .single-post--content .sticky {
   top: var(--margin);
-  left: 0;
   transform: translateY(-6px);
   margin-left: calc(var(--margin-small) * -1);
-  padding-left: var(--margin);
   width: 100%;
   margin-bottom: 1em;
-}
-
-.single-post--content .sticky.fixed {
-  position: fixed;
+  padding-left: var(--margin-small);
   left: var(--margin-small)
 }
 
+
 @media (min-width: 40rem) {
   .single-post--content .sticky {
-    position: sticky;
+    position: fixed;
+    padding-left: var(--margin);
   }
 }
 
@@ -269,7 +266,13 @@ a[]:active {
 .footer-nav {
   display: flex;
   justify-content: space-between;
-  padding: var(--margin);
+  padding: var(--margin-small);
+}
+
+@media (min-width: 40rem) {
+  .footer-nav {
+    padding: var(--margin);
+  }
 }
 
 .footer-nav a {
@@ -282,8 +285,15 @@ a[]:active {
   letter-spacing: 0.3px;
   word-spacing: 0.2px;
   font-size: 15.3px;
-  padding-left: var(--margin);
-  padding-right: var(--margin);
+  padding-left: var(--margin-small);
+  padding-right: var(--margin-small);
   color: var(--cream);
   padding-bottom: var(--margin);
+}
+
+@media (min-width: 40rem) {
+  .site-footer {
+    padding-left: var(--margin);
+    padding-right: var(--margin);
+  }
 }
