Ensure random link only goes to valid project pages

--- a/_layouts/base.njk
+++ b/_layouts/base.njk
@@ -27,7 +27,8 @@
     
         let projects = [
             {%- for p in collections.project -%}
-                "{{p.url}}",
+                {% if not p.data.file %}
+                {% if p.data.permalink != false %}"{{p.url}}",{% endif %}{% endif %}
             {%- endfor -%}
             ""
         ]
