--- a/css/style.css
+++ b/css/style.css
@@ -250,7 +250,7 @@ a[href]:hover {
 
 .single-post--content img {
   max-width: 100%;
-  margin-bottom: var(--margin);
+  margin-bottom: 8px;
 }
 
 @media (max-width: 40rem) {
