--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,13 @@
 }
 
 @keyframes color {
-  0% {background-color: var(--brown);}
-  100% {background-color: var(--lightgray);}
+  0% {
+    background-color: var(--brown);
+  }
+
+  100% {
+    background-color: var(--lightgray);
+  }
 }
 
 /*================================================================
@@ -49,7 +54,8 @@ body.project {
   animation: color 3s reverse;
 }
 
-a, a:visited {
+a,
+a:visited {
   color: var(--purple);
   text-shadow: 0 0 12.5px var(--purple);
   padding: 0 0 0.2 0;
@@ -178,12 +184,14 @@ a[href]:hover {
 
 .post-list-image {
   display: block;
-  margin-bottom: 13px; /* optically the same as project page */
+  margin-bottom: 13px;
+  /* optically the same as project page */
   cursor: pointer;
 }
 
 .post-list-image:last-of-type {
-  margin-bottom: calc(var(--margin) - 2px); /* margin with optical correction */
+  margin-bottom: calc(var(--margin) - 2px);
+  /* margin with optical correction */
 }
 
 .post-list-image img {
@@ -249,16 +257,26 @@ a[href]:hover {
   align-self: center;
 }
 
-.single-post--content img {
+.single-post--content picture {
   max-width: 100%;
   margin-bottom: 8px;
 }
 
+.single-post--content img {
+  max-width: 100%;
+}
+
+.single-post--content picture:last-of-type {
+  margin-bottom: var(--margin)
+}
+
 @media (max-width: 40rem) {
+
   .single-post--content picture,
   .single-post--content img {
     width: 100% !important;
   }
+
   .post-list-image {
     max-width: 100% !important;
     max-height: none;
