Pull up book images to line up with title

--- a/_layouts/project.njk
+++ b/_layouts/project.njk
@@ -2,7 +2,7 @@
 layout: base
 bodyClass: project
 ---
-<article class="single-post">
+<article class="single-post" data-book="{{isBook}}">
     <main class="single-post--content">
         {{content | safe}}
     </main>
