Remove pointer cursor on projects w/o link

--- a/css/style.css
+++ b/css/style.css
@@ -199,6 +199,9 @@ a[href]:hover {
   max-width: 100%;
 }
 
+[data-permalink=false] a{
+  cursor: default;
+}
 
 /*=============================================================
 ======================== Single Project =======================
