Fix random link

--- a/_layouts/project.njk
+++ b/_layouts/project.njk
@@ -10,5 +10,5 @@ bodyClass: project
 
 <nav class="footer-nav">
     <a href="/#{{title | urlencode }}">⬿</a>
-    <a class='randomLink' href='#'>ξ</a>
+    <a class='randomLink fixed' href='#'>ξ</a>
 </nav>
