Expand image compression target

--- a/css/style.css
+++ b/css/style.css
@@ -344,7 +344,8 @@ a[href]:hover {
   width: 100%;
   margin-bottom: 1em;
   padding-left: var(--margin-small);
-  left: var(--margin-small)
+  left: var(--margin-small);
+  padding-right: 4rem;
 }
 
 @media (min-width: 40rem) {
