--- a/css/style.css
+++ b/css/style.css
@@ -386,6 +386,7 @@ a[href]:hover {
   opacity: 0;
   transition: 600ms;
   z-index: 5000;
+  display: none !important; /* Temoporary */
 }
 
 overlay.no-animation img {
