Hide project images during layout adjust

--- a/_layouts/project.njk
+++ b/_layouts/project.njk
@@ -3,7 +3,7 @@ layout: base
 bodyClass: project
 ---
 <article class="single-post" data-book="{{isBook}}">
-    <main class="single-post--content">
+    <main class="single-post--content images-loading">
         {{content | safe}}
     </main>
 </article>
