--- a/css/style.css
+++ b/css/style.css
@@ -304,6 +304,12 @@ a[href]:hover {
 
 .single-post--content picture {
   margin-bottom: 8px;
+  transition: 200ms;
+}
+@media (min-width: 40rem){
+  .single-post--content.images-loading picture {
+    opacity: 0;
+  }
 }
 
 .single-post--content img {
